Se agrega controlador de diagnostico psicologia
